# anthroping

./: .pre-commit-config.yaml  Agents.md  CLAUDE.md  README.md  agents.md  anthroping.py  ignore-spelling-words.txt  pyproject.toml
tests/: test_anthroping.py  test_example.py
